# ProjetoIntegrador

./: .gitignore  README.md
API/: API_CheckGateState.py
Firmware/: .cproject  .project  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  OCV_ColorTrack_P.c  idf_component.yml  index_OCV_ColorTrack.h  main.c  main.c.rej  main.cpp  main.py  main2.c  page.h  sdcard.c  sdcard.h  settings.c  settings.h
Firmware/src/: main.c
FirmwarePython/: http_server.py  main.py
OpenGateApp/open_gate/: .firebaserc  README.md  firebase.json  pubspec.yaml
OpenGateApp/open_gate/android/app/: build.gradle  google-services.json
OpenGateApp/open_gate/android/app/src/main/: AndroidManifest.xml
OpenGateApp/open_gate/ios/: firebase_app_id_file.json
OpenGateApp/open_gate/ios/Runner/: GoogleService-Info.plist  Info.plist
OpenGateApp/open_gate/ios/Runner.xcodeproj/: project.pbxproj
OpenGateApp/open_gate/lib/: firebase_options.dart  main.dart
OpenGateApp/open_gate/linux/: CMakeLists.txt  my_application.cc
OpenGateApp/open_gate/macos/Runner.xcodeproj/: project.pbxproj
OpenGateApp/open_gate/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
OpenGateApp/open_gate/macos/Runner/Configs/: AppInfo.xcconfig
OpenGateApp/open_gate/test/: widget_test.dart
OpenGateApp/open_gate/web/: index.html  manifest.json
OpenGateApp/open_gate/windows/: CMakeLists.txt
OpenGateApp/open_gate/windows/runner/: Runner.rc  main.cpp
ServerAPI/: api.py  app.py
ServerAPI/my-venv/: pyvenv.cfg
ServerAPI/my-venv/Scripts/: activate  activate.bat
sdspi/: .cproject  .project  sdkconfig
sdspi/main/: idf_component.yml  sd_card_example_main.c
